--- a/sass/site/layout/_layout.scss
+++ b/sass/site/layout/_layout.scss
@@ -43,7 +43,7 @@ body{
 
 .ast-article-post,
 .ast-article-single{
-	padding: 4em;
+	padding-bottom: 4em;
 }
 
 //separate container content layout
@@ -62,6 +62,7 @@ body{
 	.ast-article-single{
 		background-color: $color-background-content;
 		margin: 0;
+		padding: 4em;
 	}
 	.blog-layout-1{
         padding: 0;
